--- a/.config/wofi/style.css
+++ b/.config/wofi/style.css
@@ -1,53 +1,112 @@
+@define-color rosewater #f5e0dc;
+@define-color flamingo #f2cdcd;
+@define-color pink #f5c2e7;
+@define-color mauve #cba6f7;
+@define-color red #f38ba8;
+@define-color maroon #eba0ac;
+@define-color peach #fab387;
+@define-color yellow #f9e2af;
+@define-color green #a6e3a1;
+@define-color teal #94e2d5;
+@define-color sky #89dceb;
+@define-color sapphire #74c7ec;
+@define-color blue #89b4fa;
+@define-color lavender #b4befe;
+@define-color text #cdd6f4;
+@define-color subtext1 #bac2de;
+@define-color subtext0 #a6adc8;
+@define-color overlay2 #9399b2;
+@define-color overlay1 #7f849c;
+@define-color overlay0 #6c7086;
+@define-color surface2 #585b70;
+@define-color surface1 #45475a;
+@define-color surface0 #313244;
+@define-color base #1e1e2e;
+@define-color mantle #181825;
+@define-color crust #11111b;
+
+* {
+    font-family: "JetBrainsMono Nerd Font", FontAwesome, sans-serif;
+    font-size: 14px;
+    border: none;
+    border-radius: 0;
+}
+
 window {
-margin: 0px;
-border: 2px solid #50BFB4;
-background-color: #0D0D0D;
-}
-
-#input {
-margin: 5px;
-border: none;
-color: #f8f8f2;
-background-color: #026873;
-}
-
-#inner-box {
-margin: 5px;
-border: none;
-background-color: #0D0D0D;
+    background-color: alpha(@base, 0.95);
+    border-radius: 12px;
+    border: 1px solid @surface1;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
 }
 
 #outer-box {
-margin: 5px;
-border: none;
-background-color: #0D0D0D;
+    margin: 10px;
+    padding: 10px;
+    background-color: transparent;
+}
+
+#input {
+    background-color: @surface0;
+    color: @text;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    border: 1px solid @surface2;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.2);
+}
+
+#input:focus {
+    border: 1px solid @blue;
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.2), 0 0 0 2px alpha(@blue, 0.3);
 }
 
 #scroll {
-margin: 0px;
-border: none;
+    margin-top: 5px;
+    background-color: transparent;
 }
 
-#text {
-margin: 5px;
-border: none;
-color: #f8f8f2;
-}
-
-#entry.activatable #text {
-color: #f8f8f2;
-}
-
-#entry > * {
-color: #f8f8f2;
-
+#entry {
+    padding: 8px 15px;
+    color: @subtext1;
+    background-color: transparent;
+    border-radius: 8px;
+    margin: 2px 0px;
+    transition: all 0.2s ease-in-out;
 }
 
 #entry:selected {
-background-color: #026873;
+    background-image: linear-gradient(to right, @blue, @mauve);
+    color: @crust;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
 }
 
-#entry:selected #text {
-font-weight: bold;
-background-color: #026873;
+#text {
+    color: inherit;
+    background-color: transparent;
+    margin-left: 5px;
 }
+
+#img {
+    margin-right: 10px;
+    background-color: transparent;
+    opacity: 0.9;
+    transition: opacity 0.2s ease-in-out;
+}
+
+#entry:selected #img {
+    opacity: 1.0;
+}
+
+#entry:hover #img {
+    opacity: 1.0;
+}
+
+#entry:nth-child(even) {
+}
+
+#entry:nth-child(even):selected {
+    background-image: linear-gradient(to right, @blue, @mauve);
+    color: @crust;
+}
+
